# bridge

./: .gitignore  Cargo.toml  README.md  dist-workspace.toml  justfile
skill/bridge/: SKILL.md
src/: config.rs  env_loader.rs  env_subst.rs  lock.rs  main.rs  ssh.rs
src/commands/: download.rs  hosts.rs  init.rs  mod.rs  run.rs  ssh.rs  sync.rs  upload.rs
