[package]
name = "bridge"
version = "0.1.0"
edition = "2021"
description = "Remote development tool for syncing code and running commands"

[dependencies]
clap = { version = "4", features = ["derive"] }
toml = "0.8"
serde = { version = "1", features = ["derive"] }
anyhow = "1"
regex = "1"
fs2 = "0.4"

[dev-dependencies]
tempfile = "3"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
